<resources>
    <string name="app_name">Ajkal NewYork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_image">Header Image</string>
    <string name="application_logo">Application Logo</string>
    <string name="back_button">Back Button</string>
    <string name="logo_moto">সর্বশেষ খবর, পর্যালোচনা, ভিডিও আপডেট</string>
    <string name="sign_in_bn">সাইন ইন করুন</string>
    <string name="register_bn">নিবন্ধন</string>
    <string name="email_icon">email icon</string>
    <string name="email_bn">ই-মেইল</string>
    <string name="app_email">ajkalnews@gmail.com</string>
    <string name="phone_icon">phone_icon</string>
    <string name="phone_bn">ফোন</string>
    <string name="app_phone_no">718–565–2100</string>
    <string name="location_icon">location_icon</string>
    <string name="address_bn">ঠিকানা</string>
    <string name="app_address">New York, USA</string>
    <string name="website_icon">website_icon</string>
    <string name="website_bn">ওয়েবসাইট</string>
    <string name="app_website">ajkalnewyork.com</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="pinterest_icon">pinterest icon</string>
    <string name="instagram_icon">instagram icon</string>
    <string name="whatsapp_icon">whatsapp icon</string>
    <string name="youtube_icon">youtube icon</string>
    <string name="download_news">Download News</string>
    <string name="dummy_news_title_1">মেয়র পদে কৃষ্ণাঙ্গ এরিক অ্যাডামসের জয় নিউইয়র্কে। আইন-শৃঙ্খলা অবনতির আশঙ্কা !</string>
    <string name="reporter_name">সুব্রত আচার্য্য</string>
    <string name="news_time">২৭ জানুয়ারী, সকাল ১১:২০</string>
    <string name="dummy_cat">প্রযুক্তি</string>
    <string name="no_data">No data found</string>
    <string name="breaking_news">ব্রেকিং নিউজ:</string>

    <string-array name="news_filters">

        <item>সর্বশেষ</item>
        <item>খেলা</item>
        <item>প্রযুক্তি</item>
        <item>স্বাস্থ্য</item>
        <item>রাজনীতি</item>
        <item>সারা বাংলা</item>
        <item>বিনোদন</item>
        <item>লাইফস্টাইল</item>
        <item>যুক্তরাষ্ট্র</item>


    </string-array>

    <string-array name="subscriptions">
        <item>২৪ ঘন্টা</item>
        <item>১ সপ্তাহ</item>
        <item>১ মাস</item>
        <item>৩ মাস</item>
        <item>৬ মাস</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="ajker_new_york">Ajkal New York</string>
    <string name="continue_to">Continue to</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="footer_copyright">© ২০২১ | সাপ্তাহিক আজকাল কর্তৃক সর্বসত্ব ® সংরক্ষিত | উন্নয়নে ইকেটেকনোলজিগ্রুপ.কম</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="defaultCategoryName">সর্বশেষ</string>
    <string name="title_activity_detail_image">DetailImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="default_division">সকল বিভাগ</string>
    <string name="default_district">সকল জেলা</string>
    <string name="please_wait">Please wait a moment</string>
    <string name="succeeded">Success!!</string>
    <string name="edit_profile_button">Edit Profile Button</string>
    <string name="payment_status_paid">paid</string>
    <string name="payment_status_unpaid">not paid</string>
    <string name="server_error">A server error has occurred</string>
    <string name="your_advertisement">Your Advertisement</string>
    <string name="archive_category">আর্কাইভস</string>
    <string name="select_a_date">Select a date</string>
    <string name="loading_msg">Loading!! Please Wait!!</string>
    <string name="error_loading">An error has occurred</string>
    <string name="enter_email">Enter your email to continue</string>
    <string name="forgot_password">Reset Password</string>
</resources>