<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.InfoActivity">

    <ImageView
        android:contentDescription="@string/header_image"
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_resource_abstract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_info"
        android:contentDescription="@string/application_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/moto"
        app:layout_constraintStart_toStartOf="@+id/moto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_back_ios"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/logo_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo_info"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/moto"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_moto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/balooda2_semi_bold"
        android:padding="16dp"
        android:text="@string/sign_in_bn"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:strokeColor="@color/secondaryColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/balooda2_semi_bold"
        android:padding="16dp"
        android:text="@string/register_bn"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:strokeColor="@color/secondaryColor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/email_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:strokeColor="#EEEEEE"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/email_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/email_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/email_bn"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/app_email"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/telephone_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_card_view"
        app:strokeColor="#EEEEEE"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/telephone_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/phone_icon" />

            <TextView
                android:id="@+id/phone_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/phone_bn"
                app:layout_constraintBottom_toBottomOf="@+id/phone_icon"
                app:layout_constraintStart_toEndOf="@+id/phone_icon"
                app:layout_constraintTop_toTopOf="@+id/phone_icon" />

            <TextView
                android:id="@+id/phone_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/app_phone_no"
                app:layout_constraintBottom_toBottomOf="@+id/phone_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/phone_header"
                app:layout_constraintTop_toTopOf="@+id/phone_header" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/location_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephone_card_view"
        app:strokeColor="#EEEEEE"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/location_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/location_icon" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/address_bn"
                app:layout_constraintBottom_toBottomOf="@+id/location_icon"
                app:layout_constraintStart_toEndOf="@+id/location_icon"
                app:layout_constraintTop_toTopOf="@+id/location_icon" />

            <TextView
                android:id="@+id/location_text_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/app_address"
                app:layout_constraintBottom_toBottomOf="@+id/location_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/location_text"
                app:layout_constraintTop_toTopOf="@+id/location_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/website_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_card_view"
        app:strokeColor="#EEEEEE"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/website_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/website_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/website_icon" />

            <TextView
                android:id="@+id/website_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/website_bn"
                app:layout_constraintBottom_toBottomOf="@+id/website_icon"
                app:layout_constraintStart_toEndOf="@+id/website_icon"
                app:layout_constraintTop_toTopOf="@+id/website_icon" />

            <TextView
                android:id="@+id/website_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/app_website"
                app:layout_constraintBottom_toBottomOf="@+id/website_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/website_text"
                app:layout_constraintTop_toTopOf="@+id/website_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/fb_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/facebook_icon"
        app:layout_constraintEnd_toStartOf="@id/pin_icon"
        app:layout_constraintStart_toStartOf="@+id/website_card_view"
        app:layout_constraintTop_toBottomOf="@+id/website_card_view"
        android:contentDescription="@string/facebook_icon" />

    <ImageView
        android:id="@+id/pin_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:src="@drawable/pinterest_icon"
        app:layout_constraintBottom_toBottomOf="@+id/fb_icon"
        app:layout_constraintStart_toEndOf="@+id/fb_icon"
        app:layout_constraintEnd_toStartOf="@id/insta_icon"
        app:layout_constraintTop_toTopOf="@+id/fb_icon"
        android:contentDescription="@string/pinterest_icon" />

    <ImageView
        android:id="@+id/insta_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:src="@drawable/instagram_icon"
        app:layout_constraintBottom_toBottomOf="@+id/pin_icon"
        app:layout_constraintTop_toTopOf="@+id/pin_icon"
        app:layout_constraintStart_toEndOf="@id/pin_icon"
        app:layout_constraintEnd_toStartOf="@id/wsap_icon"
        tools:layout_editor_absoluteX="100dp"
        android:contentDescription="@string/instagram_icon" />

    <ImageView
        android:id="@+id/wsap_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:src="@drawable/whatsapp_icon"
        app:layout_constraintStart_toEndOf="@id/insta_icon"
        app:layout_constraintEnd_toStartOf="@id/yt_icon"
        app:layout_constraintBottom_toBottomOf="@+id/insta_icon"
        app:layout_constraintTop_toTopOf="@+id/insta_icon"
        tools:layout_editor_absoluteX="130dp"
        android:contentDescription="@string/whatsapp_icon" />

    <ImageView
        android:id="@+id/yt_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:src="@drawable/youtube_icon"
        app:layout_constraintStart_toEndOf="@id/wsap_icon"
        app:layout_constraintEnd_toStartOf="@id/download_news_btn"
        app:layout_constraintBottom_toBottomOf="@+id/wsap_icon"
        app:layout_constraintTop_toTopOf="@+id/wsap_icon"
        tools:layout_editor_absoluteX="160dp"
        android:contentDescription="@string/youtube_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/download_news_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/download_news"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_cloud_download_24"
        app:iconTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/yt_icon"
        app:layout_constraintEnd_toEndOf="@+id/website_card_view"
        app:layout_constraintStart_toEndOf="@id/yt_icon"
        app:layout_constraintTop_toTopOf="@+id/yt_icon"
        app:strokeColor="@color/green" />
</androidx.constraintlayout.widget.ConstraintLayout>