<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/header_image"
            android:scaleType="centerInside"
            android:src="@drawable/ic_resource_abstract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/application_logo"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="@+id/moto"
            app:layout_constraintStart_toStartOf="@+id/moto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moto"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_moto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_info" />

        <TextView
            android:id="@+id/login_banner"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <LinearLayout
            android:id="@+id/login_banner_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_banner">

            <TextView
                android:id="@+id/login_banner_child_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_weight="1"
                android:textStyle="normal"
                android:text="@string/continue_to" />

            <TextView
                android:id="@+id/login_banner_child_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/ajker_new_york" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_login_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:visibility="invisible"
            app:icon="@drawable/ic_google_colored"
            app:iconSize="24dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_banner_2" />

        <TextView
            android:id="@+id/_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_login_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/google_login_button"
            app:layout_constraintStart_toStartOf="@+id/google_login_button"
            app:layout_constraintTop_toBottomOf="@+id/_or">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/login_email_layout"
            app:layout_constraintStart_toStartOf="@+id/login_email_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forget_pass_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Forgot Passowrd?"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/login_password_input_layout"
            app:layout_constraintStart_toStartOf="@+id/login_password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Login"
            android:textColor="@color/white"
            app:backgroundTint="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="@+id/login_password_input_layout"
            app:layout_constraintStart_toStartOf="@+id/login_password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/forget_pass_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="New to Ajker New York?"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_to_register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Create an account"
                android:textAllCaps="false"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

